html structure and its rough styling are created

--- a/index.html
+++ b/index.html
@@ -9,8 +9,89 @@
 </head>
 <body>
     
-    
+    <header>
+        <h1>Students</h1>
+    </header>
 
+    <main>
+        <section class="cards-list container">
+
+            <!-- these are just example cards for styling purposes -->
+            <!-- to be deleted after styling -->
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/25.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/88.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/23.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/50.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/21.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/6.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <article class="card">
+                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/56.jpg" alt="picture">
+                <h2 class="card-item name">name</h2>
+                <p class="card-item email">email@mail.io</p>
+                <hr class="card-item horizontal-line">
+                <p class="card-item join-date">joined on</p>
+            </article>
+
+            <!-- end of example cards -->
+
+        </section>
+    </main>
+
+    <footer>
+        <!-- this is just an example page for styling purposes -->
+        <!-- to be deleted after styling -->
+        <section class="pages container">
+            <article class="page-element">
+                <p class="page-number">1</p>
+            </article>
+        </section>
+        <!-- end of example page -->
+    </footer>
+
+    <script src="/data.js"></script>
     <script src="/functions.js"></script>
     <script src="/app.js"></script>
 </body>
