All cards are loading properly.
String/name length limit should be implemented. Styles to be remade to compensate string lengths.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- these are just example cards for styling purposes -->
             <!-- to be deleted after styling -->
 
-            <article class="card">
+            <!-- <article class="card">
                 <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/25.jpg" alt="picture">
                 <h2 class="card-item name">name</h2>
                 <p class="card-item email">email@mail.io</p>
@@ -73,7 +73,7 @@
                 <p class="card-item email">email@mail.io</p>
                 <hr class="card-item horizontal-line">
                 <p class="card-item join-date">joined on</p>
-            </article>
+            </article> -->
 
             <!-- end of example cards -->
 
