A maximized card appears after clicking on card and closes if pressed on the x icon.
Stylizing made directly in CSS. Maybe it should be moved in JS?

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     </header>
 
     <main>
+        <section class="maximized">
+            <!-- <article class="Gregory-Vargas maxi-card">
+                <img src="pictures/close.png" class="Gregory-Vargas maxi-card-item close"><img
+                    class="Gregory-Vargas maxi-card-item portrait" src="https://randomuser.me/api/portraits/men/23.jpg"
+                    alt="thumbnail-Gregory-Vargas">
+                <h2 class="Gregory-Vargas maxi-card-item name">Gregory Vargas</h2>
+                <p class="Gregory-Vargas maxi-card-item email">gregory.vargas@example.com</p>
+                <hr class="Gregory-Vargas maxi-card-item horizontal-line">
+                <p class="Gregory-Vargas maxi-card-item join-date">Joined on 03-20-2013</p>
+                <p class="Gregory-Vargas maxi-card-item age">Account age: 7 years</p>
+            </article> -->
+        </section>
         <section class="cards-list container">
 
             <!-- these are just example cards for styling purposes -->
