multiple pages working

--- a/index.html
+++ b/index.html
@@ -15,92 +15,17 @@
 
     <main>
         <section class="maximized">
-            <!-- <article class="Gregory-Vargas maxi-card">
-                <img src="pictures/close.png" class="Gregory-Vargas maxi-card-item close"><img
-                    class="Gregory-Vargas maxi-card-item portrait" src="https://randomuser.me/api/portraits/men/23.jpg"
-                    alt="thumbnail-Gregory-Vargas">
-                <h2 class="Gregory-Vargas maxi-card-item name">Gregory Vargas</h2>
-                <p class="Gregory-Vargas maxi-card-item email">gregory.vargas@example.com</p>
-                <hr class="Gregory-Vargas maxi-card-item horizontal-line">
-                <p class="Gregory-Vargas maxi-card-item join-date">Joined on 03-20-2013</p>
-                <p class="Gregory-Vargas maxi-card-item age">Account age: 7 years</p>
-            </article> -->
+            <!-- the maximized card to be loaded here -->
         </section>
         <section class="cards-list container">
-
-            <!-- these are just example cards for styling purposes -->
-            <!-- to be deleted after styling -->
-
-            <!-- <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/25.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article>
-
-            <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/88.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article>
-
-            <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/23.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article>
-
-            <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/50.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article>
-
-            <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/women/21.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article>
-
-            <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/6.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article>
-
-            <article class="card">
-                <img class="card-item portrait" src="https://randomuser.me/api/portraits/men/56.jpg" alt="picture">
-                <h2 class="card-item name">name</h2>
-                <p class="card-item email">email@mail.io</p>
-                <hr class="card-item horizontal-line">
-                <p class="card-item join-date">joined on</p>
-            </article> -->
-
-            <!-- end of example cards -->
-
+            <!-- cards to be loaded here -->
         </section>
     </main>
 
     <footer>
-        <!-- this is just an example page for styling purposes -->
-        <!-- to be deleted after styling -->
         <section class="pages container">
-            <article class="page-element">
-                <p class="page-number">1</p>
-            </article>
+            <!-- page links to be loaded here -->
         </section>
-        <!-- end of example page -->
     </footer>
 
     <script src="/data.js"></script>
