arrows on keyboard control now also the cards per page number.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </header>
 
     <main>
+        <section class="buttons container">
+            <!-- buttons to be added here -->
+            <button class="add-card">Add new card</button>
+        </section>
         <section class="maximized">
             <!-- the maximized card to be loaded here -->
         </section>
