html structure made

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <section class="buttons container">
             <!-- buttons to be added here -->
             <button class="add-card">Add new card</button>
+            <div class="filter">
+                <label for="filter-date-start">Start Date</label>
+                <input type="date" id="filter-date-start">
+                <label for="filter-date-end">End Date</label>
+                <input type="date", id="filter-date-end">
+            </div>
+            <div class="search">
+                <label for="search-name">Search by name</label>
+                <input type="text" id="search-name">
+            </div>
         </section>
         <section class="maximized">
             <!-- the maximized card to be loaded here -->
